[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Companion.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Arrow.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 31.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 248.299

[node name="Companion" type="KinematicBody2D"]
scale = Vector2( 0.99103, 1 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
follow_speed = 1.5
arrows = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.698039, 1, 0.490196, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="AttackRadius" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
